5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1692_1880.log
== TEST (2019-04-23 19:38:57) 
-- CODE:
mes = int(input("digite o numero do mes: "))

if (1 <= m <= 12) and (m == 1):
	print("janeiro")
elif (1 <= m <= 12) and (m == 2):
	print("fevereiro")
elif (1 <= m <= 12) and (m == 3):
	print("março")
elif (1 <= m <= 12) and (m == 4):
	print("abril")
elif (1 <= m <= 12) and (m == 5):
	print("maio")
elif (1 <= m <= 12) and (m == 6):
	print("junho")
elif (1 <= m <= 12) and (m == 7):
	print("julho")
elif (1 <= m <= 12) and (m == 8):
	print("agosto")
elif (1 <= m <= 12) and (m == 9):
	print("setembro")
elif (1 <= m <= 12) and (m == 10):
	print("outubro")
elif (1 <= m <= 12) and (m == 11):
	print("novembro")
elif (1 <= m <= 12) and (m == 12):
	print("dezembro")
else:
	print("numero de mes invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (1 <= m <= 12) and (m == 1):
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 19:39:10) 
-- CODE:
m = int(input("digite o numero do mes: "))

if (1 <= m <= 12) and (m == 1):
	print("janeiro")
elif (1 <= m <= 12) and (m == 2):
	print("fevereiro")
elif (1 <= m <= 12) and (m == 3):
	print("março")
elif (1 <= m <= 12) and (m == 4):
	print("abril")
elif (1 <= m <= 12) and (m == 5):
	print("maio")
elif (1 <= m <= 12) and (m == 6):
	print("junho")
elif (1 <= m <= 12) and (m == 7):
	print("julho")
elif (1 <= m <= 12) and (m == 8):
	print("agosto")
elif (1 <= m <= 12) and (m == 9):
	print("setembro")
elif (1 <= m <= 12) and (m == 10):
	print("outubro")
elif (1 <= m <= 12) and (m == 11):
	print("novembro")
elif (1 <= m <= 12) and (m == 12):
	print("dezembro")
else:
	print("numero de mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 19:39:15) 
-- CODE:
m = int(input("digite o numero do mes: "))

if (1 <= m <= 12) and (m == 1):
	print("janeiro")
elif (1 <= m <= 12) and (m == 2):
	print("fevereiro")
elif (1 <= m <= 12) and (m == 3):
	print("março")
elif (1 <= m <= 12) and (m == 4):
	print("abril")
elif (1 <= m <= 12) and (m == 5):
	print("maio")
elif (1 <= m <= 12) and (m == 6):
	print("junho")
elif (1 <= m <= 12) and (m == 7):
	print("julho")
elif (1 <= m <= 12) and (m == 8):
	print("agosto")
elif (1 <= m <= 12) and (m == 9):
	print("setembro")
elif (1 <= m <= 12) and (m == 10):
	print("outubro")
elif (1 <= m <= 12) and (m == 11):
	print("novembro")
elif (1 <= m <= 12) and (m == 12):
	print("dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.204533
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
